# Shiritori

./: .gitignore  Cargo.toml  Dockerfile  README.md  VERSION  schema.sql  test.sql
src/: actions.rs  bot_handler.rs  fuzzy_index.rs  lib.rs  macros.rs  main.rs  message.rs  room.rs  util.rs
src/bot/: bot_context.rs  config.rs  handler.rs  mod.rs  shiritori_bot.rs
src/commands/: find.rs  message_commands.rs  mod.rs  queue.rs  skip.rs  vote.rs
src/database/: db.rs  mod.rs  repository.rs  wrap_params.rs
src/macros/: enummc.rs  error.rs  mod.rs  test.rs
