[package]
name = "shiritori_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.41"
lazy_static = "1.5.0"
regex = "1.11.2"
reqwest = {version = "0.12.23", features = ["json", "rustls-tls"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serenity = "0.12.4"
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["full"] }
