[package]
name = "Shiritori"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenv = "0.15.0"
futures = "0.3.31"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serenity = "0.12.4"
signal-hook = "0.3.18"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
